# Si5351-lib

./: CMakeLists.txt
inc/: si5351.h
src/: si5351.c
